services/nginx-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-web-ingress
spec:
  # defaultBackend:
  #   service:
  #     name: green-service
  #     port:
  #       number: 80
  rules:
    - host: webserver1.192.168.56.10.nip.io
      http:
        paths:
          - backend:
              service:
                name: nginx-frontend
                port:
                  number: 8080
            pathType: Prefix
            path: /
  ingressClassName: nginx
